--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@ url: "http://odudevgroup.github.io"
 
 # User settings
 username: oduDevGroup
-user_title: Lorem Ipsum - FrontEnd
+user_title: oduDevGroup
 email: jharr173@odu.edu
-twitter_username: loremipsum
+# twitter_username: loremipsum
 github_username:  odudevgroup
-gplus_username:  loremipsum
-disqus_username: loremipsum
+# gplus_username:  loremipsum
+disqus_username: odudevgroup
 
 # Build settings
 markdown: kramdown
@@ -40,11 +40,7 @@ links:
     url: /about
 # projects in header index
 projects:
-  - name: asciilang
-    url: https://github.com/victorvoid/asciilang
-  - name: vim-frontend
-    url: https://github.com/victorvoid/vim-frontend
-  - name: generator-capybara
-    url: https://github.com/victorvoid/generator-capybara
+  - name: Website
+    url: https://github.com/odudevgroup/odudevgroup.github.io
 # exclude my node related stuff
 exclude: ['package.json', 'src', 'node_modules']
