--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,11 @@ links:
     url: /tags
   - title: about
     url: /about
+  - title: contact
+    url: /contact
 # projects in header index
 projects:
-  - name: Website
+  - name: This Website
     url: https://github.com/odudevgroup/odudevgroup.github.io
 # exclude my node related stuff
 exclude: ['package.json', 'src', 'node_modules']
