--- a/_config.yml
+++ b/_config.yml
@@ -32,10 +32,10 @@ links:
     url: /
   - title: posts
     url: /posts
-  - title: series
-    url: /series
-  - title: tags
-    url: /tags
+  # - title: series
+  #   url: /series
+  # - title: tags
+  #   url: /tags
   - title: about
     url: /about
   - title: contact
