Updates logo, slack.

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ email: jharr173@odu.edu
 # twitter_username: loremipsum
 github_username:  odudevgroup
 # gplus_username:  loremipsum
+slack_team: odudevgroup
 disqus_username: odudevgroup
 
 # Build settings
